# Physiks

./: .gitignore  .gitmodules  CMakeLists.txt  Physiks.cpp  Physiks.h
include/: main.cpp
include/Physiks/: Body.cpp  Body.h  Calc.h  Collision.h  World.cpp  World.h
test/: CMakeLists.txt  TestCollisions.cpp
